--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
   },
   "homepage": "https://github.com/receiptline/receiptline#readme",
   "dependencies": {
+    "events": "^3.3.0",
     "iconv-lite": "^0.6.0",
-    "pngjs": "^5.0.0"
+    "pngjs": "^5.0.0",
+    "readable-stream": "^3.6.0",
+    "string_decoder": "^1.3.0"
   },
   "devDependencies": {
     "qrcode-generator": "^1.4.4"
